--- a/title.tex
+++ b/title.tex
@@ -14,8 +14,7 @@
 
 % Тема
 \topic{%
-Lorem ipsum~-- новые подходы к разработке программного обеспечения
-на естественных языках}
+Реализация и исследование 5GL1 на платформе с архитектурой Intel Skylake}
 
 % Направление
 \coursenum{09.04.01}
